prevent text flickers

--- a/css/main.scss
+++ b/css/main.scss
@@ -106,6 +106,11 @@ html {
   transition: transform 1s ease;
   position: relative;
 
+  // prevent text flickers
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility:    hidden;
+  -ms-backface-visibility:     hidden;
+
     &__header {
       line-height: 17px;
       letter-spacing: 0.5px;
